// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mergeRecords volume one author with 3 series and many volumes 1`] = `
Immutable.Map {
  data: Immutable.Map {
    f6f21458-e707-40ba-b9ec-f7f28d7c6343: Object {
      "content": null,
      "date": "2017-05-31",
      "edition_id": "73173187-5965-451c-adbe-84e3e719abc0",
      "id": "f6f21458-e707-40ba-b9ec-f7f28d7c6343",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61CV%2BQwDT7L.jpg",
      "isbn": "9782820328533",
      "number": 5,
      "title": "Tome 5",
    },
    2c7fb5f7-8e3c-4cd2-83f3-b2182aaa3155: Object {
      "content": null,
      "date": "2014-11-28",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "2c7fb5f7-8e3c-4cd2-83f3-b2182aaa3155",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61um-EvJIXL.jpg",
      "isbn": "9782505060468",
      "number": 20,
      "title": "Tome 20",
    },
    ae3c90d6-3a73-415e-8b3e-02d48910db9f: Object {
      "content": null,
      "date": "2011-01-07",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "ae3c90d6-3a73-415e-8b3e-02d48910db9f",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51FEUifFO0L.jpg",
      "isbn": "9782505010302",
      "number": 5,
      "title": "Tome 5",
    },
    ec23f826-05bc-4bfc-b3e1-b2227e782ce9: Object {
      "content": null,
      "date": "2010-07-02",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "ec23f826-05bc-4bfc-b3e1-b2227e782ce9",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ihjP9KCzL.jpg",
      "isbn": "9782505008262",
      "number": 1,
      "title": "Tome 1",
    },
    f0bc0f76-bddf-4af8-a589-0d877aae9235: Object {
      "content": null,
      "date": "2007-12-07",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "f0bc0f76-bddf-4af8-a589-0d877aae9235",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61qgonxtZOL.jpg",
      "isbn": "9782505001997",
      "number": 7,
      "title": "Tome 7",
    },
    a2280876-7082-48b5-bab3-34c4e5eab279: Object {
      "content": null,
      "date": "2007-10-05",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "a2280876-7082-48b5-bab3-34c4e5eab279",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ccrw7ky1L.jpg",
      "isbn": "9782505001812",
      "number": 6,
      "title": "Tome 6",
    },
    fa7a1162-d9e3-462f-a367-8371a55f7c94: Object {
      "content": null,
      "date": "2007-04-05",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "fa7a1162-d9e3-462f-a367-8371a55f7c94",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61fiEjVbUbL.jpg",
      "isbn": "9782505000792",
      "number": 3,
      "title": "Tome 3",
    },
    11d1491e-22d4-49f1-b29f-78007493d4e6: Object {
      "content": null,
      "date": "2007-02-01",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "11d1491e-22d4-49f1-b29f-78007493d4e6",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61DduSmdKGL.jpg",
      "isbn": "9782505000426",
      "number": 2,
      "title": "Tome 2",
    },
    ef30e49c-46ad-40db-a910-03ec06f3da86: Object {
      "content": null,
      "date": "2013-10-18",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "ef30e49c-46ad-40db-a910-03ec06f3da86",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61Q4SMRrLlL.jpg",
      "isbn": "9782505017295",
      "number": 16,
      "title": "Tome 16",
    },
    ec9d0282-78a1-491e-bd1e-a937b332c56f: Object {
      "content": null,
      "date": "2011-05-06",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "ec9d0282-78a1-491e-bd1e-a937b332c56f",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/41FBONjMi4L.jpg",
      "isbn": "9782505010951",
      "number": 6,
      "title": "Tome 6",
    },
    d6f8a236-4a04-4999-a8d1-d0f8c95c9a1f: Object {
      "content": null,
      "date": "2010-09-17",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "d6f8a236-4a04-4999-a8d1-d0f8c95c9a1f",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51UizLCakoL.jpg",
      "isbn": "9782505009634",
      "number": 3,
      "title": "Tome 3",
    },
    0a5d6649-4cd7-4bc0-ac56-f4167064b6e4: Object {
      "content": null,
      "date": "2014-04-04",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "0a5d6649-4cd7-4bc0-ac56-f4167064b6e4",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51NOi76qm7L.jpg",
      "isbn": "9782505060444",
      "number": 18,
      "title": "Tome 18",
    },
    06fe038b-8c0d-4767-9167-ae3ca9bc3067: Object {
      "content": null,
      "date": "2017-03-08",
      "edition_id": "73173187-5965-451c-adbe-84e3e719abc0",
      "id": "06fe038b-8c0d-4767-9167-ae3ca9bc3067",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51tKK5n%2B-3L.jpg",
      "isbn": "9782820328175",
      "number": 4,
      "title": "Tome 4",
    },
    975e5e39-8a47-4e0c-9a60-4a6256163257: Object {
      "content": null,
      "date": "2016-09-07",
      "edition_id": "73173187-5965-451c-adbe-84e3e719abc0",
      "id": "975e5e39-8a47-4e0c-9a60-4a6256163257",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51sgTWp8W-L.jpg",
      "isbn": "9782820324948",
      "number": 2,
      "title": "Tome 2",
    },
    69fed8ee-a500-4bde-9ba2-458f639785d1: Object {
      "content": null,
      "date": "2011-01-07",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "69fed8ee-a500-4bde-9ba2-458f639785d1",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/41lRggimfJL.jpg",
      "isbn": "9782505010326",
      "number": 4,
      "title": "Tome 4",
    },
    c1995831-6447-43e9-869b-74f2cf93966d: Object {
      "content": null,
      "date": "2008-06-06",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "c1995831-6447-43e9-869b-74f2cf93966d",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61OEH0gsrIL.jpg",
      "isbn": "9782505003038",
      "number": 10,
      "title": "Tome 10",
    },
    a4477f49-cff1-4913-bd39-68fefbc10479: Object {
      "content": null,
      "date": "2008-07-04",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "a4477f49-cff1-4913-bd39-68fefbc10479",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/618b1GXgGFL.jpg",
      "isbn": "9782505003694",
      "number": 11,
      "title": "Tome 11",
    },
    618faa60-f9f4-495e-ae04-6b232c560383: Object {
      "content": null,
      "date": "2012-04-27",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "618faa60-f9f4-495e-ae04-6b232c560383",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51Jafyn2XUL.jpg",
      "isbn": "9782505014379",
      "number": 10,
      "title": "Tome 10",
    },
    896c1b28-9d31-4f12-a307-b0e86b18ce34: Object {
      "content": null,
      "date": "2011-04-01",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "896c1b28-9d31-4f12-a307-b0e86b18ce34",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51xox2vAXYL.jpg",
      "isbn": "9782505010760",
      "number": 6,
      "title": "Tome 6",
    },
    bc9c3b30-c11d-4495-98de-c3bf5e16e789: Object {
      "content": null,
      "date": "2012-01-06",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "bc9c3b30-c11d-4495-98de-c3bf5e16e789",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/615UvI3NaWL.jpg",
      "isbn": "9782505049685",
      "number": 9,
      "title": "Tome 9",
    },
    04754705-044e-4292-8ed2-eee50ee91d2d: Object {
      "content": null,
      "date": "2016-05-25",
      "edition_id": "73173187-5965-451c-adbe-84e3e719abc0",
      "id": "04754705-044e-4292-8ed2-eee50ee91d2d",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51TgELYk1WL.jpg",
      "isbn": "9782820324603",
      "number": 1,
      "title": "Tome 1",
    },
    11606764-7aee-4e33-9df1-e9dc5298eda8: Object {
      "content": null,
      "date": "2008-10-02",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "11606764-7aee-4e33-9df1-e9dc5298eda8",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61XFUTPtQdL.jpg",
      "isbn": "9782505004295",
      "number": 12,
      "title": "Tome 12",
    },
    4e2bfa92-e111-4fca-a76d-2aed84deacc1: Object {
      "content": null,
      "date": "2011-10-07",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "4e2bfa92-e111-4fca-a76d-2aed84deacc1",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51iV%2BuoYPcL.jpg",
      "isbn": "9782505012412",
      "number": 8,
      "title": "Tome 8",
    },
    65435d42-5c34-4359-a776-ea4eb00be938: Object {
      "content": null,
      "date": "2013-04-05",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "65435d42-5c34-4359-a776-ea4eb00be938",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51-EE9Xj0fL.jpg",
      "isbn": "9782505017271",
      "number": 14,
      "title": "Tome 14",
    },
    19195ca1-dee9-48a7-8c39-9906a1f2b0ca: Object {
      "content": null,
      "date": "2012-10-19",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "19195ca1-dee9-48a7-8c39-9906a1f2b0ca",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51qdqdxDqZL.jpg",
      "isbn": "9782505015475",
      "number": 12,
      "title": "Tome 12",
    },
    87262606-aa57-4035-a83f-3baac10bf4e9: Object {
      "content": null,
      "date": "2010-07-02",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "87262606-aa57-4035-a83f-3baac10bf4e9",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51n4kKZnMSL.jpg",
      "isbn": "9782505008279",
      "number": 2,
      "title": "Tome 2",
    },
    2e1afcfe-1e70-4f15-bba8-1acc089edd40: Object {
      "content": null,
      "date": "2010-11-05",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "2e1afcfe-1e70-4f15-bba8-1acc089edd40",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ihSKjlJXL.jpg",
      "isbn": "9782505009887",
      "number": 4,
      "title": "Tome 4",
    },
    5fceded4-b1c8-44ad-90c2-2512e2347669: Object {
      "content": null,
      "date": "2012-07-06",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "5fceded4-b1c8-44ad-90c2-2512e2347669",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51w36HrDDhL.jpg",
      "isbn": "9782505014799",
      "number": 11,
      "title": "Tome 11",
    },
    27e50b0a-785e-4298-af2f-ae492c57c8a6: Object {
      "content": null,
      "date": "2017-09-20",
      "edition_id": "73173187-5965-451c-adbe-84e3e719abc0",
      "id": "27e50b0a-785e-4298-af2f-ae492c57c8a6",
      "img": "",
      "isbn": "9782820329011",
      "number": 6,
      "title": "Tome 6",
    },
    3a03733c-1a5a-4673-9299-28e5cc82a8af: Object {
      "content": null,
      "date": "2010-09-03",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "3a03733c-1a5a-4673-9299-28e5cc82a8af",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51KMP3phtGL.jpg",
      "isbn": "9782505009061",
      "number": 2,
      "title": "Tome 2",
    },
    1238dea9-842e-4c09-8d5a-2d738b64650a: Object {
      "content": null,
      "date": "2014-01-24",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "1238dea9-842e-4c09-8d5a-2d738b64650a",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51WX33roerL.jpg",
      "isbn": "9782505060062",
      "number": 17,
      "title": "Tome 17",
    },
    b95ab092-9baf-4feb-b8f1-e79b449b9c54: Object {
      "content": null,
      "date": "2007-08-24",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "b95ab092-9baf-4feb-b8f1-e79b449b9c54",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61bXKQlOllL.jpg",
      "isbn": "9782505001614",
      "number": 5,
      "title": "Tome 5",
    },
    081648ff-1b14-4af7-b8f0-9e97b0ba6804: Object {
      "content": null,
      "date": "2009-09-18",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "081648ff-1b14-4af7-b8f0-9e97b0ba6804",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51JrRDR1ANL.jpg",
      "isbn": "9782505004523",
      "number": 13,
      "title": "Tome 13",
    },
    12b5dc0d-253a-41dd-bbee-e1f31e947eb1: Object {
      "content": null,
      "date": "2008-02-15",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "12b5dc0d-253a-41dd-bbee-e1f31e947eb1",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ZlUQFdaPL.jpg",
      "isbn": "9782505002697",
      "number": 8,
      "title": "Tome 8",
    },
    7c0ad1a9-4a80-4710-b11b-eed249456924: Object {
      "content": null,
      "date": "2016-11-23",
      "edition_id": "73173187-5965-451c-adbe-84e3e719abc0",
      "id": "7c0ad1a9-4a80-4710-b11b-eed249456924",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51jAjenb0EL.jpg",
      "isbn": "9782820325402",
      "number": 3,
      "title": "Tome 3",
    },
    e7dbccb5-4710-446b-8c08-d35fb8a1eaeb: Object {
      "content": null,
      "date": "2007-05-31",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "e7dbccb5-4710-446b-8c08-d35fb8a1eaeb",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/611d8aPhqhL.jpg",
      "isbn": "9782505001065",
      "number": 4,
      "title": "Tome 4",
    },
    dbab2483-2d3c-4832-9993-b6efbd765787: Object {
      "content": null,
      "date": "2010-07-02",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "dbab2483-2d3c-4832-9993-b6efbd765787",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/413rEPunmPL.jpg",
      "isbn": "9782505009054",
      "number": 1,
      "title": "Tome 1",
    },
    73f6690b-716b-4659-97f5-d66ce10acd8a: Object {
      "content": null,
      "date": "2008-04-11",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "73f6690b-716b-4659-97f5-d66ce10acd8a",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61jqfMbZ8VL.jpg",
      "isbn": "9782505002970",
      "number": 9,
      "title": "Tome 9",
    },
    f7064665-b7a8-4ece-bf9c-38fa2ed50159: Object {
      "content": null,
      "date": "2014-07-04",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "f7064665-b7a8-4ece-bf9c-38fa2ed50159",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51lwosrDNBL.jpg",
      "isbn": "9782505060451",
      "number": 19,
      "title": "Tome 19",
    },
    de6cb0d3-d128-49a5-a410-8fbd8c51bb49: Object {
      "content": null,
      "date": "2013-07-05",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "de6cb0d3-d128-49a5-a410-8fbd8c51bb49",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/510bEcHF6QL.jpg",
      "isbn": "9782505017288",
      "number": 15,
      "title": "Tome 15",
    },
    7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32: Object {
      "content": null,
      "date": "2010-11-05",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/41mLoqm6D0L.jpg",
      "isbn": "9782505009986",
      "number": 3,
      "title": "Tome 3",
    },
    ff15ae7e-fcfe-4061-a27b-3b481e5f313c: Object {
      "content": null,
      "date": "2007-01-18",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "ff15ae7e-fcfe-4061-a27b-3b481e5f313c",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51eBp6XUd5L.jpg",
      "isbn": "9782505000327",
      "number": 1,
      "title": "Tome 1",
    },
    dec4d105-ed98-42a1-aefb-62d772b1d586: Object {
      "content": null,
      "date": "2011-07-01",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "dec4d105-ed98-42a1-aefb-62d772b1d586",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51GHBMNri8L.jpg",
      "isbn": "9782505011699",
      "number": 7,
      "title": "Tome 7",
    },
    ef282203-2ef5-4972-9598-d365fe7ff09c: Object {
      "content": null,
      "date": "2011-03-04",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "ef282203-2ef5-4972-9598-d365fe7ff09c",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/41%2BDT%2B3-rwL.jpg",
      "isbn": "9782505010692",
      "number": 5,
      "title": "Tome 5",
    },
    bc78b63f-e602-453f-b75d-f91a92416114: Object {
      "content": null,
      "date": "2013-01-04",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "bc78b63f-e602-453f-b75d-f91a92416114",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51Tt6c27sWL.jpg",
      "isbn": "9782505016847",
      "number": 13,
      "title": "Tome 13",
    },
  },
  relations: Immutable.Map {
    edition_id: Immutable.Map {
      73173187-5965-451c-adbe-84e3e719abc0: Immutable.OrderedSet [
        "27e50b0a-785e-4298-af2f-ae492c57c8a6",
        "f6f21458-e707-40ba-b9ec-f7f28d7c6343",
        "06fe038b-8c0d-4767-9167-ae3ca9bc3067",
        "7c0ad1a9-4a80-4710-b11b-eed249456924",
        "975e5e39-8a47-4e0c-9a60-4a6256163257",
        "04754705-044e-4292-8ed2-eee50ee91d2d",
      ],
      8413f439-9bdd-42a2-bd40-4b0f6118dc8d: Immutable.OrderedSet [
        "2c7fb5f7-8e3c-4cd2-83f3-b2182aaa3155",
        "f7064665-b7a8-4ece-bf9c-38fa2ed50159",
        "0a5d6649-4cd7-4bc0-ac56-f4167064b6e4",
        "1238dea9-842e-4c09-8d5a-2d738b64650a",
        "ef30e49c-46ad-40db-a910-03ec06f3da86",
        "de6cb0d3-d128-49a5-a410-8fbd8c51bb49",
        "65435d42-5c34-4359-a776-ea4eb00be938",
        "bc78b63f-e602-453f-b75d-f91a92416114",
        "19195ca1-dee9-48a7-8c39-9906a1f2b0ca",
        "5fceded4-b1c8-44ad-90c2-2512e2347669",
        "618faa60-f9f4-495e-ae04-6b232c560383",
        "bc9c3b30-c11d-4495-98de-c3bf5e16e789",
        "4e2bfa92-e111-4fca-a76d-2aed84deacc1",
        "dec4d105-ed98-42a1-aefb-62d772b1d586",
        "896c1b28-9d31-4f12-a307-b0e86b18ce34",
        "ae3c90d6-3a73-415e-8b3e-02d48910db9f",
        "2e1afcfe-1e70-4f15-bba8-1acc089edd40",
        "d6f8a236-4a04-4999-a8d1-d0f8c95c9a1f",
        "87262606-aa57-4035-a83f-3baac10bf4e9",
        "ec23f826-05bc-4bfc-b3e1-b2227e782ce9",
      ],
      908612fd-1cc7-4780-aea4-63d3ac04c6bd: Immutable.OrderedSet [
        "ec9d0282-78a1-491e-bd1e-a937b332c56f",
        "ef282203-2ef5-4972-9598-d365fe7ff09c",
        "69fed8ee-a500-4bde-9ba2-458f639785d1",
        "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32",
        "3a03733c-1a5a-4673-9299-28e5cc82a8af",
        "dbab2483-2d3c-4832-9993-b6efbd765787",
      ],
      5482eba9-2773-40d8-82f7-1870b1b2a3e9: Immutable.OrderedSet [
        "081648ff-1b14-4af7-b8f0-9e97b0ba6804",
        "11606764-7aee-4e33-9df1-e9dc5298eda8",
        "a4477f49-cff1-4913-bd39-68fefbc10479",
        "c1995831-6447-43e9-869b-74f2cf93966d",
        "73f6690b-716b-4659-97f5-d66ce10acd8a",
        "12b5dc0d-253a-41dd-bbee-e1f31e947eb1",
        "f0bc0f76-bddf-4af8-a589-0d877aae9235",
        "a2280876-7082-48b5-bab3-34c4e5eab279",
        "b95ab092-9baf-4feb-b8f1-e79b449b9c54",
        "e7dbccb5-4710-446b-8c08-d35fb8a1eaeb",
        "fa7a1162-d9e3-462f-a367-8371a55f7c94",
        "11d1491e-22d4-49f1-b29f-78007493d4e6",
        "ff15ae7e-fcfe-4061-a27b-3b481e5f313c",
      ],
    },
  },
}
`;

exports[`mergeRecords volume one serie loose a volume in an edition compare to store 1`] = `
Immutable.Map {
  data: Immutable.Map {
    6c507d7f-660b-41cb-b2c5-63d521a28a5c: Object {
      "content": null,
      "date": "2013-06-13",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "6c507d7f-660b-41cb-b2c5-63d521a28a5c",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51F6C3joThL.jpg",
      "isbn": "9782351428863",
      "number": 6,
      "title": "Tome VI (12-13)",
    },
    f0bc0f76-bddf-4af8-a589-0d877aae9235: Object {
      "content": null,
      "date": "2007-12-07",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "f0bc0f76-bddf-4af8-a589-0d877aae9235",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61qgonxtZOL.jpg",
      "isbn": "9782505001997",
      "number": 7,
      "title": "Tome 7",
    },
    b9a4ab06-bf43-47ca-950c-c973b6b18f87: Object {
      "content": null,
      "date": "2009-07-02",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "b9a4ab06-bf43-47ca-950c-c973b6b18f87",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51PDZv8zolL.jpg",
      "isbn": "9782351424285",
      "number": 21,
      "title": "Tome 21",
    },
    a2280876-7082-48b5-bab3-34c4e5eab279: Object {
      "content": null,
      "date": "2007-10-05",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "a2280876-7082-48b5-bab3-34c4e5eab279",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ccrw7ky1L.jpg",
      "isbn": "9782505001812",
      "number": 6,
      "title": "Tome 6",
    },
    fa7a1162-d9e3-462f-a367-8371a55f7c94: Object {
      "content": null,
      "date": "2007-04-05",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "fa7a1162-d9e3-462f-a367-8371a55f7c94",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61fiEjVbUbL.jpg",
      "isbn": "9782505000792",
      "number": 3,
      "title": "Tome 3",
    },
    79bee76a-01fd-4fd3-b3e2-690a969780b7: Object {
      "content": null,
      "date": "2013-12-12",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "79bee76a-01fd-4fd3-b3e2-690a969780b7",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/5110gRxSqXL.jpg",
      "isbn": "9782351428993",
      "number": 8,
      "title": "Tome VIII (16-17)",
    },
    11d1491e-22d4-49f1-b29f-78007493d4e6: Object {
      "content": null,
      "date": "2007-02-01",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "11d1491e-22d4-49f1-b29f-78007493d4e6",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61DduSmdKGL.jpg",
      "isbn": "9782505000426",
      "number": 2,
      "title": "Tome 2",
    },
    8d5329c8-2ad5-4713-8961-84f2e42a61c6: Object {
      "content": null,
      "date": "2012-03-08",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "8d5329c8-2ad5-4713-8961-84f2e42a61c6",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51MOHY8mkuL.jpg",
      "isbn": "9782351427552",
      "number": 1,
      "title": "Tome I (1-2-3)",
    },
    a88bec8c-f793-4b18-858a-843e4da8d97b: Object {
      "content": null,
      "date": "2009-11-11",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "a88bec8c-f793-4b18-858a-843e4da8d97b",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51gKyIdz4HL.jpg",
      "isbn": "9782351424483",
      "number": 22,
      "title": "Tome 22",
    },
    ebdca7a2-8f86-4c64-a30a-86cdfb71ba7e: Object {
      "content": null,
      "date": "2008-12-11",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "ebdca7a2-8f86-4c64-a30a-86cdfb71ba7e",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51AJQx-WJTL.jpg",
      "isbn": "9782351423356",
      "number": 19,
      "title": "Tome 19",
    },
    aa321497-4302-4d2e-bee2-997cc67d915c: Object {
      "content": null,
      "date": "2008-03-13",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "aa321497-4302-4d2e-bee2-997cc67d915c",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ZPmK0lQ5L.jpg",
      "isbn": "9782351422656",
      "number": 16,
      "title": "Tome 16",
    },
    b70e06ed-3004-4987-8974-d9270c623cb9: Object {
      "content": null,
      "date": "2008-05-15",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "b70e06ed-3004-4987-8974-d9270c623cb9",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51U2mxsRMBL.jpg",
      "isbn": "9782351423189",
      "number": 17,
      "title": "Tome 17",
    },
    9e207271-9b78-401b-88f1-50b3432ea0cd: Object {
      "content": null,
      "date": "2009-04-09",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "9e207271-9b78-401b-88f1-50b3432ea0cd",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51JbyQkx8mL.jpg",
      "isbn": "9782351424117",
      "number": 20,
      "title": "Tome 20",
    },
    22549c4a-290c-4ad7-b73f-ca9b10aa41b0: Object {
      "content": null,
      "date": "2006-03-09",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "22549c4a-290c-4ad7-b73f-ca9b10aa41b0",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51PHT8RQ3XL.jpg",
      "isbn": "9782351420454",
      "number": 5,
      "title": "Tome 5",
    },
    ec9d0282-78a1-491e-bd1e-a937b332c56f: Object {
      "content": null,
      "date": "2011-05-06",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "ec9d0282-78a1-491e-bd1e-a937b332c56f",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/41FBONjMi4L.jpg",
      "isbn": "9782505010951",
      "number": 6,
      "title": "Tome 6",
    },
    5e336e2a-794f-43e3-b299-10eb2020fa73: Object {
      "content": null,
      "date": "2006-07-13",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "5e336e2a-794f-43e3-b299-10eb2020fa73",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51BNYNYRCHL.jpg",
      "isbn": "9782351420478",
      "number": 7,
      "title": "Tome 7",
    },
    3ed9c57c-f69a-4898-99b1-27fd2bb4bb89: Object {
      "content": null,
      "date": "2010-09-09",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "3ed9c57c-f69a-4898-99b1-27fd2bb4bb89",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51MUDCoa2%2BL.jpg",
      "isbn": "9782351425497",
      "number": 24,
      "title": "Tome 24",
    },
    69fed8ee-a500-4bde-9ba2-458f639785d1: Object {
      "content": null,
      "date": "2011-01-07",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "69fed8ee-a500-4bde-9ba2-458f639785d1",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/41lRggimfJL.jpg",
      "isbn": "9782505010326",
      "number": 4,
      "title": "Tome 4",
    },
    7407fb12-e182-400d-936e-0b807635c26e: Object {
      "content": null,
      "date": "2008-09-11",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "7407fb12-e182-400d-936e-0b807635c26e",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51Yqa-BwdeL.jpg",
      "isbn": "9782351423257",
      "number": 18,
      "title": "Tome 18",
    },
    c1995831-6447-43e9-869b-74f2cf93966d: Object {
      "content": null,
      "date": "2008-06-06",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "c1995831-6447-43e9-869b-74f2cf93966d",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61OEH0gsrIL.jpg",
      "isbn": "9782505003038",
      "number": 10,
      "title": "Tome 10",
    },
    a4477f49-cff1-4913-bd39-68fefbc10479: Object {
      "content": null,
      "date": "2008-07-04",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "a4477f49-cff1-4913-bd39-68fefbc10479",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/618b1GXgGFL.jpg",
      "isbn": "9782505003694",
      "number": 11,
      "title": "Tome 11",
    },
    ab0808c6-83d3-4c23-b4f3-3d9375a94424: Object {
      "content": null,
      "date": "2014-03-13",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "ab0808c6-83d3-4c23-b4f3-3d9375a94424",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51KTyJvBA3L.jpg",
      "isbn": "9782351429884",
      "number": 9,
      "title": "Tome IX (18-19)",
    },
    87adf237-5a75-4389-9c5e-66a0aa17be9a: Object {
      "content": null,
      "date": "2007-03-08",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "87adf237-5a75-4389-9c5e-66a0aa17be9a",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51pBQ9Fa7qL.jpg",
      "isbn": "9782351421512",
      "number": 11,
      "title": "Tome 11",
    },
    11606764-7aee-4e33-9df1-e9dc5298eda8: Object {
      "content": null,
      "date": "2008-10-02",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "11606764-7aee-4e33-9df1-e9dc5298eda8",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61XFUTPtQdL.jpg",
      "isbn": "9782505004295",
      "number": 12,
      "title": "Tome 12",
    },
    0c34b2b6-15ac-4f36-bdb1-87cbebe87d53: Object {
      "content": null,
      "date": "2006-03-14",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "0c34b2b6-15ac-4f36-bdb1-87cbebe87d53",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/518dhvDM77L.jpg",
      "isbn": "9782351420485",
      "number": 8,
      "title": "Tome 8",
    },
    4b155570-e2bc-44e8-8f92-f66ac55e72b0: Object {
      "content": null,
      "date": "2007-11-08",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "4b155570-e2bc-44e8-8f92-f66ac55e72b0",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51o0y0uZgWL.jpg",
      "isbn": "9782351421598",
      "number": 15,
      "title": "Tome 15",
    },
    70f353f8-3374-43c1-a681-19dbf9fa3c2e: Object {
      "content": null,
      "date": "2006-05-11",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "70f353f8-3374-43c1-a681-19dbf9fa3c2e",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/518GTC3WXZL.jpg",
      "isbn": "9782351420461",
      "number": 6,
      "title": "Tome 6",
    },
    9f016317-2b39-4daa-8f7a-d936616b2473: Object {
      "content": null,
      "date": "2007-05-10",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "9f016317-2b39-4daa-8f7a-d936616b2473",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/516r%2BFE%2BHdL.jpg",
      "isbn": "9782351421567",
      "number": 12,
      "title": "Tome 12",
    },
    b87423f2-71d7-4be4-8fdc-bc396708ee63: Object {
      "content": null,
      "date": "2012-03-08",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "b87423f2-71d7-4be4-8fdc-bc396708ee63",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51CscZC9c-L.jpg",
      "isbn": "9782351427521",
      "number": 2,
      "title": "Tome II (4-5)",
    },
    ae4cc5d7-d42d-41f6-80c1-8c6aa432d078: Object {
      "content": null,
      "date": "2011-07-07",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "ae4cc5d7-d42d-41f6-80c1-8c6aa432d078",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/5180gk8s3ML.jpg",
      "isbn": "9782351426517",
      "number": 27,
      "title": "Tome 27",
    },
    3a03733c-1a5a-4673-9299-28e5cc82a8af: Object {
      "content": null,
      "date": "2010-09-03",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "3a03733c-1a5a-4673-9299-28e5cc82a8af",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51KMP3phtGL.jpg",
      "isbn": "9782505009061",
      "number": 2,
      "title": "Tome 2",
    },
    f6e73e4f-1695-42e1-87a0-0cea8c66c935: Object {
      "content": null,
      "date": "2012-12-13",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "f6e73e4f-1695-42e1-87a0-0cea8c66c935",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51VA-uGoFTL.jpg",
      "isbn": "9782351428016",
      "number": 4,
      "title": "Tome IV (8-9)",
    },
    58715dcb-ce62-4b8c-a6b0-6412310b12ff: Object {
      "content": null,
      "date": "2006-11-09",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "58715dcb-ce62-4b8c-a6b0-6412310b12ff",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51N7A347E8L.jpg",
      "isbn": "9782351420492",
      "number": 9,
      "title": "Tome 9",
    },
    6aaa945f-074c-4a4f-9662-15e7a8d70a73: Object {
      "content": null,
      "date": "2012-09-13",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "6aaa945f-074c-4a4f-9662-15e7a8d70a73",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51oDm7wFRML.jpg",
      "isbn": "9782351428009",
      "number": 3,
      "title": "Tome III (6-7)",
    },
    0a914a8f-18fc-4103-9385-4b888714ec30: Object {
      "content": null,
      "date": "2015-05-15",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "0a914a8f-18fc-4103-9385-4b888714ec30",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ZchWkPawL.jpg",
      "isbn": "9782368521281",
      "number": 12,
      "title": "TOME XII (24-25)",
    },
    98739f45-b46a-41cb-822d-fc9953dc5fc1: Object {
      "content": null,
      "date": "2013-09-12",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "98739f45-b46a-41cb-822d-fc9953dc5fc1",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51HnB19v8xL.jpg",
      "isbn": "9782351428986",
      "number": 7,
      "title": "Tome VII (14-15)",
    },
    8dfb2e62-fa73-4570-9d8a-1647e7ee4e48: Object {
      "content": null,
      "date": "2014-08-28",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "8dfb2e62-fa73-4570-9d8a-1647e7ee4e48",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51yYF6FeaXL.jpg",
      "isbn": "9782351429891",
      "number": 10,
      "title": "Tome X (20-21)",
    },
    97d6078e-b650-412a-981d-311859f62e50: Object {
      "content": null,
      "date": "2005-11-10",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "97d6078e-b650-412a-981d-311859f62e50",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/4170GPPT93L.jpg",
      "isbn": "9782351420195",
      "number": 3,
      "title": "Tome 3",
    },
    b95ab092-9baf-4feb-b8f1-e79b449b9c54: Object {
      "content": null,
      "date": "2007-08-24",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "b95ab092-9baf-4feb-b8f1-e79b449b9c54",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61bXKQlOllL.jpg",
      "isbn": "9782505001614",
      "number": 5,
      "title": "Tome 5",
    },
    d13f21d4-eee6-4b45-bb1c-ce1a8c746613: Object {
      "content": null,
      "date": "2006-01-12",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "d13f21d4-eee6-4b45-bb1c-ce1a8c746613",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51Z7FVQZ7EL.jpg",
      "isbn": "9782351420416",
      "number": 4,
      "title": "Tome 4",
    },
    6bc33a10-08e7-448c-9608-91ce041f411c: Object {
      "content": null,
      "date": "2007-09-13",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "6bc33a10-08e7-448c-9608-91ce041f411c",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/5166lgh93xL.jpg",
      "isbn": "9782351421581",
      "number": 14,
      "title": "Tome 14",
    },
    031b0651-488e-4926-be9c-7a3ccfcc9af7: Object {
      "content": null,
      "date": "2010-04-08",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "031b0651-488e-4926-be9c-7a3ccfcc9af7",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51nhgwjPE8L.jpg",
      "isbn": "9782351425077",
      "number": 23,
      "title": "Tome 23",
    },
    4b3ecb6e-a082-49dc-8c9e-848a54c3ccb3: Object {
      "content": null,
      "date": "2005-09-08",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "4b3ecb6e-a082-49dc-8c9e-848a54c3ccb3",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51s8zCicyrL.jpg",
      "isbn": "9782351420188",
      "number": 2,
      "title": "Tome 2",
    },
    081648ff-1b14-4af7-b8f0-9e97b0ba6804: Object {
      "content": null,
      "date": "2009-09-18",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "081648ff-1b14-4af7-b8f0-9e97b0ba6804",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51JrRDR1ANL.jpg",
      "isbn": "9782505004523",
      "number": 13,
      "title": "Tome 13",
    },
    12b5dc0d-253a-41dd-bbee-e1f31e947eb1: Object {
      "content": null,
      "date": "2008-02-15",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "12b5dc0d-253a-41dd-bbee-e1f31e947eb1",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ZlUQFdaPL.jpg",
      "isbn": "9782505002697",
      "number": 8,
      "title": "Tome 8",
    },
    e7dbccb5-4710-446b-8c08-d35fb8a1eaeb: Object {
      "content": null,
      "date": "2007-05-31",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "e7dbccb5-4710-446b-8c08-d35fb8a1eaeb",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/611d8aPhqhL.jpg",
      "isbn": "9782505001065",
      "number": 4,
      "title": "Tome 4",
    },
    dbab2483-2d3c-4832-9993-b6efbd765787: Object {
      "content": null,
      "date": "2010-07-02",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "dbab2483-2d3c-4832-9993-b6efbd765787",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/413rEPunmPL.jpg",
      "isbn": "9782505009054",
      "number": 1,
      "title": "Tome 1",
    },
    73f6690b-716b-4659-97f5-d66ce10acd8a: Object {
      "content": null,
      "date": "2008-04-11",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "73f6690b-716b-4659-97f5-d66ce10acd8a",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61jqfMbZ8VL.jpg",
      "isbn": "9782505002970",
      "number": 9,
      "title": "Tome 9",
    },
    0354b860-d994-4fb2-b649-ca8c494a26f6: Object {
      "content": null,
      "date": "2014-12-11",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "0354b860-d994-4fb2-b649-ca8c494a26f6",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51VgR6QYSWL.jpg",
      "isbn": "9782351429907",
      "number": 11,
      "title": "Tome XI (22-23)",
    },
    ee7075c0-ff5a-44b0-a832-02a0c2d97151: Object {
      "content": null,
      "date": "2011-01-13",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "ee7075c0-ff5a-44b0-a832-02a0c2d97151",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51QJSQxrRHL.jpg",
      "isbn": "9782351425732",
      "number": 25,
      "title": "Tome 25",
    },
    7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32: Object {
      "content": null,
      "date": "2010-11-05",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/41mLoqm6D0L.jpg",
      "isbn": "9782505009986",
      "number": 3,
      "title": "Tome 3",
    },
    ff15ae7e-fcfe-4061-a27b-3b481e5f313c: Object {
      "content": null,
      "date": "2007-01-18",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "ff15ae7e-fcfe-4061-a27b-3b481e5f313c",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51eBp6XUd5L.jpg",
      "isbn": "9782505000327",
      "number": 1,
      "title": "Tome 1",
    },
    29cac096-a063-41c2-82d0-7be9a957ca73: Object {
      "content": null,
      "date": "2007-01-11",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "29cac096-a063-41c2-82d0-7be9a957ca73",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51%2BMB-tOfVL.jpg",
      "isbn": "9782351421475",
      "number": 10,
      "title": "Tome 10",
    },
    ef282203-2ef5-4972-9598-d365fe7ff09c: Object {
      "content": null,
      "date": "2011-03-04",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "ef282203-2ef5-4972-9598-d365fe7ff09c",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/41%2BDT%2B3-rwL.jpg",
      "isbn": "9782505010692",
      "number": 5,
      "title": "Tome 5",
    },
    37b02128-ba53-448b-9cc7-14f0e7225d8b: Object {
      "content": null,
      "date": "2007-07-12",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "37b02128-ba53-448b-9cc7-14f0e7225d8b",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51sGW14FPOL.jpg",
      "isbn": "9782351421574",
      "number": 13,
      "title": "Tome 13",
    },
    e31288f3-a313-4a9b-a193-857a9fb227ab: Object {
      "content": null,
      "date": "2005-09-08",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "e31288f3-a313-4a9b-a193-857a9fb227ab",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51-4u%2B8MwSL.jpg",
      "isbn": "9782351420171",
      "number": 1,
      "title": "Tome 1",
    },
    9ce1636f-8f64-4de9-a7c8-fc51de1892d8: Object {
      "content": null,
      "date": "2013-03-14",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "9ce1636f-8f64-4de9-a7c8-fc51de1892d8",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/516OCcGCm9L.jpg",
      "isbn": "9782351428740",
      "number": 5,
      "title": "Tome V (10-11)",
    },
    d73221df-c228-4d34-9c44-a599e861d27a: Object {
      "content": null,
      "date": "2011-04-14",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "d73221df-c228-4d34-9c44-a599e861d27a",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51XhvMFwHuL.jpg",
      "isbn": "9782351426319",
      "number": 26,
      "title": "Tome 26",
    },
  },
  relations: Immutable.Map {
    edition_id: Immutable.Map {
      908612fd-1cc7-4780-aea4-63d3ac04c6bd: Immutable.OrderedSet [
        "ec9d0282-78a1-491e-bd1e-a937b332c56f",
        "ef282203-2ef5-4972-9598-d365fe7ff09c",
        "69fed8ee-a500-4bde-9ba2-458f639785d1",
        "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32",
        "3a03733c-1a5a-4673-9299-28e5cc82a8af",
        "dbab2483-2d3c-4832-9993-b6efbd765787",
      ],
      5482eba9-2773-40d8-82f7-1870b1b2a3e9: Immutable.OrderedSet [
        "081648ff-1b14-4af7-b8f0-9e97b0ba6804",
        "11606764-7aee-4e33-9df1-e9dc5298eda8",
        "a4477f49-cff1-4913-bd39-68fefbc10479",
        "c1995831-6447-43e9-869b-74f2cf93966d",
        "73f6690b-716b-4659-97f5-d66ce10acd8a",
        "12b5dc0d-253a-41dd-bbee-e1f31e947eb1",
        "f0bc0f76-bddf-4af8-a589-0d877aae9235",
        "a2280876-7082-48b5-bab3-34c4e5eab279",
        "b95ab092-9baf-4feb-b8f1-e79b449b9c54",
        "e7dbccb5-4710-446b-8c08-d35fb8a1eaeb",
        "fa7a1162-d9e3-462f-a367-8371a55f7c94",
        "11d1491e-22d4-49f1-b29f-78007493d4e6",
        "ff15ae7e-fcfe-4061-a27b-3b481e5f313c",
      ],
      d42c9391-c92f-4485-a772-8df06d70ed17: Immutable.OrderedSet [
        "0a914a8f-18fc-4103-9385-4b888714ec30",
        "0354b860-d994-4fb2-b649-ca8c494a26f6",
        "8dfb2e62-fa73-4570-9d8a-1647e7ee4e48",
        "ab0808c6-83d3-4c23-b4f3-3d9375a94424",
        "79bee76a-01fd-4fd3-b3e2-690a969780b7",
        "98739f45-b46a-41cb-822d-fc9953dc5fc1",
        "6c507d7f-660b-41cb-b2c5-63d521a28a5c",
        "9ce1636f-8f64-4de9-a7c8-fc51de1892d8",
        "f6e73e4f-1695-42e1-87a0-0cea8c66c935",
        "6aaa945f-074c-4a4f-9662-15e7a8d70a73",
        "b87423f2-71d7-4be4-8fdc-bc396708ee63",
        "8d5329c8-2ad5-4713-8961-84f2e42a61c6",
      ],
      ffdf56ae-058d-49c6-80c6-336471a73dcc: Immutable.OrderedSet [
        "ae4cc5d7-d42d-41f6-80c1-8c6aa432d078",
        "d73221df-c228-4d34-9c44-a599e861d27a",
        "ee7075c0-ff5a-44b0-a832-02a0c2d97151",
        "3ed9c57c-f69a-4898-99b1-27fd2bb4bb89",
        "031b0651-488e-4926-be9c-7a3ccfcc9af7",
        "a88bec8c-f793-4b18-858a-843e4da8d97b",
        "b9a4ab06-bf43-47ca-950c-c973b6b18f87",
        "9e207271-9b78-401b-88f1-50b3432ea0cd",
        "ebdca7a2-8f86-4c64-a30a-86cdfb71ba7e",
        "7407fb12-e182-400d-936e-0b807635c26e",
        "b70e06ed-3004-4987-8974-d9270c623cb9",
        "aa321497-4302-4d2e-bee2-997cc67d915c",
        "4b155570-e2bc-44e8-8f92-f66ac55e72b0",
        "6bc33a10-08e7-448c-9608-91ce041f411c",
        "37b02128-ba53-448b-9cc7-14f0e7225d8b",
        "9f016317-2b39-4daa-8f7a-d936616b2473",
        "87adf237-5a75-4389-9c5e-66a0aa17be9a",
        "29cac096-a063-41c2-82d0-7be9a957ca73",
        "58715dcb-ce62-4b8c-a6b0-6412310b12ff",
        "5e336e2a-794f-43e3-b299-10eb2020fa73",
        "70f353f8-3374-43c1-a681-19dbf9fa3c2e",
        "0c34b2b6-15ac-4f36-bdb1-87cbebe87d53",
        "22549c4a-290c-4ad7-b73f-ca9b10aa41b0",
        "d13f21d4-eee6-4b45-bb1c-ce1a8c746613",
        "97d6078e-b650-412a-981d-311859f62e50",
        "4b3ecb6e-a082-49dc-8c9e-848a54c3ccb3",
        "e31288f3-a313-4a9b-a193-857a9fb227ab",
      ],
    },
  },
}
`;

exports[`mergeRecords volume one serie then author of the serie but volumes in an edition are missing 1`] = `
Immutable.Map {
  data: Immutable.Map {
    f6f21458-e707-40ba-b9ec-f7f28d7c6343: Object {
      "content": null,
      "date": "2017-05-31",
      "edition_id": "73173187-5965-451c-adbe-84e3e719abc0",
      "id": "f6f21458-e707-40ba-b9ec-f7f28d7c6343",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61CV%2BQwDT7L.jpg",
      "isbn": "9782820328533",
      "number": 5,
      "title": "Tome 5",
    },
    2c7fb5f7-8e3c-4cd2-83f3-b2182aaa3155: Object {
      "content": null,
      "date": "2014-11-28",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "2c7fb5f7-8e3c-4cd2-83f3-b2182aaa3155",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61um-EvJIXL.jpg",
      "isbn": "9782505060468",
      "number": 20,
      "title": "Tome 20",
    },
    ae3c90d6-3a73-415e-8b3e-02d48910db9f: Object {
      "content": null,
      "date": "2011-01-07",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "ae3c90d6-3a73-415e-8b3e-02d48910db9f",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51FEUifFO0L.jpg",
      "isbn": "9782505010302",
      "number": 5,
      "title": "Tome 5",
    },
    ec23f826-05bc-4bfc-b3e1-b2227e782ce9: Object {
      "content": null,
      "date": "2010-07-02",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "ec23f826-05bc-4bfc-b3e1-b2227e782ce9",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ihjP9KCzL.jpg",
      "isbn": "9782505008262",
      "number": 1,
      "title": "Tome 1",
    },
    f0bc0f76-bddf-4af8-a589-0d877aae9235: Object {
      "content": null,
      "date": "2007-12-07",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "f0bc0f76-bddf-4af8-a589-0d877aae9235",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61qgonxtZOL.jpg",
      "isbn": "9782505001997",
      "number": 7,
      "title": "Tome 7",
    },
    a2280876-7082-48b5-bab3-34c4e5eab279: Object {
      "content": null,
      "date": "2007-10-05",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "a2280876-7082-48b5-bab3-34c4e5eab279",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ccrw7ky1L.jpg",
      "isbn": "9782505001812",
      "number": 6,
      "title": "Tome 6",
    },
    fa7a1162-d9e3-462f-a367-8371a55f7c94: Object {
      "content": null,
      "date": "2007-04-05",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "fa7a1162-d9e3-462f-a367-8371a55f7c94",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61fiEjVbUbL.jpg",
      "isbn": "9782505000792",
      "number": 3,
      "title": "Tome 3",
    },
    11d1491e-22d4-49f1-b29f-78007493d4e6: Object {
      "content": null,
      "date": "2007-02-01",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "11d1491e-22d4-49f1-b29f-78007493d4e6",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61DduSmdKGL.jpg",
      "isbn": "9782505000426",
      "number": 2,
      "title": "Tome 2",
    },
    ef30e49c-46ad-40db-a910-03ec06f3da86: Object {
      "content": null,
      "date": "2013-10-18",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "ef30e49c-46ad-40db-a910-03ec06f3da86",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61Q4SMRrLlL.jpg",
      "isbn": "9782505017295",
      "number": 16,
      "title": "Tome 16",
    },
    d6f8a236-4a04-4999-a8d1-d0f8c95c9a1f: Object {
      "content": null,
      "date": "2010-09-17",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "d6f8a236-4a04-4999-a8d1-d0f8c95c9a1f",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51UizLCakoL.jpg",
      "isbn": "9782505009634",
      "number": 3,
      "title": "Tome 3",
    },
    0a5d6649-4cd7-4bc0-ac56-f4167064b6e4: Object {
      "content": null,
      "date": "2014-04-04",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "0a5d6649-4cd7-4bc0-ac56-f4167064b6e4",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51NOi76qm7L.jpg",
      "isbn": "9782505060444",
      "number": 18,
      "title": "Tome 18",
    },
    06fe038b-8c0d-4767-9167-ae3ca9bc3067: Object {
      "content": null,
      "date": "2017-03-08",
      "edition_id": "73173187-5965-451c-adbe-84e3e719abc0",
      "id": "06fe038b-8c0d-4767-9167-ae3ca9bc3067",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51tKK5n%2B-3L.jpg",
      "isbn": "9782820328175",
      "number": 4,
      "title": "Tome 4",
    },
    975e5e39-8a47-4e0c-9a60-4a6256163257: Object {
      "content": null,
      "date": "2016-09-07",
      "edition_id": "73173187-5965-451c-adbe-84e3e719abc0",
      "id": "975e5e39-8a47-4e0c-9a60-4a6256163257",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51sgTWp8W-L.jpg",
      "isbn": "9782820324948",
      "number": 2,
      "title": "Tome 2",
    },
    c1995831-6447-43e9-869b-74f2cf93966d: Object {
      "content": null,
      "date": "2008-06-06",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "c1995831-6447-43e9-869b-74f2cf93966d",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61OEH0gsrIL.jpg",
      "isbn": "9782505003038",
      "number": 10,
      "title": "Tome 10",
    },
    a4477f49-cff1-4913-bd39-68fefbc10479: Object {
      "content": null,
      "date": "2008-07-04",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "a4477f49-cff1-4913-bd39-68fefbc10479",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/618b1GXgGFL.jpg",
      "isbn": "9782505003694",
      "number": 11,
      "title": "Tome 11",
    },
    618faa60-f9f4-495e-ae04-6b232c560383: Object {
      "content": null,
      "date": "2012-04-27",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "618faa60-f9f4-495e-ae04-6b232c560383",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51Jafyn2XUL.jpg",
      "isbn": "9782505014379",
      "number": 10,
      "title": "Tome 10",
    },
    896c1b28-9d31-4f12-a307-b0e86b18ce34: Object {
      "content": null,
      "date": "2011-04-01",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "896c1b28-9d31-4f12-a307-b0e86b18ce34",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51xox2vAXYL.jpg",
      "isbn": "9782505010760",
      "number": 6,
      "title": "Tome 6",
    },
    bc9c3b30-c11d-4495-98de-c3bf5e16e789: Object {
      "content": null,
      "date": "2012-01-06",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "bc9c3b30-c11d-4495-98de-c3bf5e16e789",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/615UvI3NaWL.jpg",
      "isbn": "9782505049685",
      "number": 9,
      "title": "Tome 9",
    },
    04754705-044e-4292-8ed2-eee50ee91d2d: Object {
      "content": null,
      "date": "2016-05-25",
      "edition_id": "73173187-5965-451c-adbe-84e3e719abc0",
      "id": "04754705-044e-4292-8ed2-eee50ee91d2d",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51TgELYk1WL.jpg",
      "isbn": "9782820324603",
      "number": 1,
      "title": "Tome 1",
    },
    11606764-7aee-4e33-9df1-e9dc5298eda8: Object {
      "content": null,
      "date": "2008-10-02",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "11606764-7aee-4e33-9df1-e9dc5298eda8",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61XFUTPtQdL.jpg",
      "isbn": "9782505004295",
      "number": 12,
      "title": "Tome 12",
    },
    4e2bfa92-e111-4fca-a76d-2aed84deacc1: Object {
      "content": null,
      "date": "2011-10-07",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "4e2bfa92-e111-4fca-a76d-2aed84deacc1",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51iV%2BuoYPcL.jpg",
      "isbn": "9782505012412",
      "number": 8,
      "title": "Tome 8",
    },
    65435d42-5c34-4359-a776-ea4eb00be938: Object {
      "content": null,
      "date": "2013-04-05",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "65435d42-5c34-4359-a776-ea4eb00be938",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51-EE9Xj0fL.jpg",
      "isbn": "9782505017271",
      "number": 14,
      "title": "Tome 14",
    },
    19195ca1-dee9-48a7-8c39-9906a1f2b0ca: Object {
      "content": null,
      "date": "2012-10-19",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "19195ca1-dee9-48a7-8c39-9906a1f2b0ca",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51qdqdxDqZL.jpg",
      "isbn": "9782505015475",
      "number": 12,
      "title": "Tome 12",
    },
    87262606-aa57-4035-a83f-3baac10bf4e9: Object {
      "content": null,
      "date": "2010-07-02",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "87262606-aa57-4035-a83f-3baac10bf4e9",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51n4kKZnMSL.jpg",
      "isbn": "9782505008279",
      "number": 2,
      "title": "Tome 2",
    },
    2e1afcfe-1e70-4f15-bba8-1acc089edd40: Object {
      "content": null,
      "date": "2010-11-05",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "2e1afcfe-1e70-4f15-bba8-1acc089edd40",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ihSKjlJXL.jpg",
      "isbn": "9782505009887",
      "number": 4,
      "title": "Tome 4",
    },
    5fceded4-b1c8-44ad-90c2-2512e2347669: Object {
      "content": null,
      "date": "2012-07-06",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "5fceded4-b1c8-44ad-90c2-2512e2347669",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51w36HrDDhL.jpg",
      "isbn": "9782505014799",
      "number": 11,
      "title": "Tome 11",
    },
    27e50b0a-785e-4298-af2f-ae492c57c8a6: Object {
      "content": null,
      "date": "2017-09-20",
      "edition_id": "73173187-5965-451c-adbe-84e3e719abc0",
      "id": "27e50b0a-785e-4298-af2f-ae492c57c8a6",
      "img": "",
      "isbn": "9782820329011",
      "number": 6,
      "title": "Tome 6",
    },
    1238dea9-842e-4c09-8d5a-2d738b64650a: Object {
      "content": null,
      "date": "2014-01-24",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "1238dea9-842e-4c09-8d5a-2d738b64650a",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51WX33roerL.jpg",
      "isbn": "9782505060062",
      "number": 17,
      "title": "Tome 17",
    },
    b95ab092-9baf-4feb-b8f1-e79b449b9c54: Object {
      "content": null,
      "date": "2007-08-24",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "b95ab092-9baf-4feb-b8f1-e79b449b9c54",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61bXKQlOllL.jpg",
      "isbn": "9782505001614",
      "number": 5,
      "title": "Tome 5",
    },
    081648ff-1b14-4af7-b8f0-9e97b0ba6804: Object {
      "content": null,
      "date": "2009-09-18",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "081648ff-1b14-4af7-b8f0-9e97b0ba6804",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51JrRDR1ANL.jpg",
      "isbn": "9782505004523",
      "number": 13,
      "title": "Tome 13",
    },
    12b5dc0d-253a-41dd-bbee-e1f31e947eb1: Object {
      "content": null,
      "date": "2008-02-15",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "12b5dc0d-253a-41dd-bbee-e1f31e947eb1",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ZlUQFdaPL.jpg",
      "isbn": "9782505002697",
      "number": 8,
      "title": "Tome 8",
    },
    7c0ad1a9-4a80-4710-b11b-eed249456924: Object {
      "content": null,
      "date": "2016-11-23",
      "edition_id": "73173187-5965-451c-adbe-84e3e719abc0",
      "id": "7c0ad1a9-4a80-4710-b11b-eed249456924",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51jAjenb0EL.jpg",
      "isbn": "9782820325402",
      "number": 3,
      "title": "Tome 3",
    },
    e7dbccb5-4710-446b-8c08-d35fb8a1eaeb: Object {
      "content": null,
      "date": "2007-05-31",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "e7dbccb5-4710-446b-8c08-d35fb8a1eaeb",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/611d8aPhqhL.jpg",
      "isbn": "9782505001065",
      "number": 4,
      "title": "Tome 4",
    },
    73f6690b-716b-4659-97f5-d66ce10acd8a: Object {
      "content": null,
      "date": "2008-04-11",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "73f6690b-716b-4659-97f5-d66ce10acd8a",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61jqfMbZ8VL.jpg",
      "isbn": "9782505002970",
      "number": 9,
      "title": "Tome 9",
    },
    f7064665-b7a8-4ece-bf9c-38fa2ed50159: Object {
      "content": null,
      "date": "2014-07-04",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "f7064665-b7a8-4ece-bf9c-38fa2ed50159",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51lwosrDNBL.jpg",
      "isbn": "9782505060451",
      "number": 19,
      "title": "Tome 19",
    },
    de6cb0d3-d128-49a5-a410-8fbd8c51bb49: Object {
      "content": null,
      "date": "2013-07-05",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "de6cb0d3-d128-49a5-a410-8fbd8c51bb49",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/510bEcHF6QL.jpg",
      "isbn": "9782505017288",
      "number": 15,
      "title": "Tome 15",
    },
    ff15ae7e-fcfe-4061-a27b-3b481e5f313c: Object {
      "content": null,
      "date": "2007-01-18",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "ff15ae7e-fcfe-4061-a27b-3b481e5f313c",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51eBp6XUd5L.jpg",
      "isbn": "9782505000327",
      "number": 1,
      "title": "Tome 1",
    },
    dec4d105-ed98-42a1-aefb-62d772b1d586: Object {
      "content": null,
      "date": "2011-07-01",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "dec4d105-ed98-42a1-aefb-62d772b1d586",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51GHBMNri8L.jpg",
      "isbn": "9782505011699",
      "number": 7,
      "title": "Tome 7",
    },
    bc78b63f-e602-453f-b75d-f91a92416114: Object {
      "content": null,
      "date": "2013-01-04",
      "edition_id": "8413f439-9bdd-42a2-bd40-4b0f6118dc8d",
      "id": "bc78b63f-e602-453f-b75d-f91a92416114",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51Tt6c27sWL.jpg",
      "isbn": "9782505016847",
      "number": 13,
      "title": "Tome 13",
    },
  },
  relations: Immutable.Map {
    edition_id: Immutable.Map {
      908612fd-1cc7-4780-aea4-63d3ac04c6bd: Immutable.OrderedSet [
      ],
      5482eba9-2773-40d8-82f7-1870b1b2a3e9: Immutable.OrderedSet [
        "081648ff-1b14-4af7-b8f0-9e97b0ba6804",
        "11606764-7aee-4e33-9df1-e9dc5298eda8",
        "a4477f49-cff1-4913-bd39-68fefbc10479",
        "c1995831-6447-43e9-869b-74f2cf93966d",
        "73f6690b-716b-4659-97f5-d66ce10acd8a",
        "12b5dc0d-253a-41dd-bbee-e1f31e947eb1",
        "f0bc0f76-bddf-4af8-a589-0d877aae9235",
        "a2280876-7082-48b5-bab3-34c4e5eab279",
        "b95ab092-9baf-4feb-b8f1-e79b449b9c54",
        "e7dbccb5-4710-446b-8c08-d35fb8a1eaeb",
        "fa7a1162-d9e3-462f-a367-8371a55f7c94",
        "11d1491e-22d4-49f1-b29f-78007493d4e6",
        "ff15ae7e-fcfe-4061-a27b-3b481e5f313c",
      ],
      73173187-5965-451c-adbe-84e3e719abc0: Immutable.OrderedSet [
        "27e50b0a-785e-4298-af2f-ae492c57c8a6",
        "f6f21458-e707-40ba-b9ec-f7f28d7c6343",
        "06fe038b-8c0d-4767-9167-ae3ca9bc3067",
        "7c0ad1a9-4a80-4710-b11b-eed249456924",
        "975e5e39-8a47-4e0c-9a60-4a6256163257",
        "04754705-044e-4292-8ed2-eee50ee91d2d",
      ],
      8413f439-9bdd-42a2-bd40-4b0f6118dc8d: Immutable.OrderedSet [
        "2c7fb5f7-8e3c-4cd2-83f3-b2182aaa3155",
        "f7064665-b7a8-4ece-bf9c-38fa2ed50159",
        "0a5d6649-4cd7-4bc0-ac56-f4167064b6e4",
        "1238dea9-842e-4c09-8d5a-2d738b64650a",
        "ef30e49c-46ad-40db-a910-03ec06f3da86",
        "de6cb0d3-d128-49a5-a410-8fbd8c51bb49",
        "65435d42-5c34-4359-a776-ea4eb00be938",
        "bc78b63f-e602-453f-b75d-f91a92416114",
        "19195ca1-dee9-48a7-8c39-9906a1f2b0ca",
        "5fceded4-b1c8-44ad-90c2-2512e2347669",
        "618faa60-f9f4-495e-ae04-6b232c560383",
        "bc9c3b30-c11d-4495-98de-c3bf5e16e789",
        "4e2bfa92-e111-4fca-a76d-2aed84deacc1",
        "dec4d105-ed98-42a1-aefb-62d772b1d586",
        "896c1b28-9d31-4f12-a307-b0e86b18ce34",
        "ae3c90d6-3a73-415e-8b3e-02d48910db9f",
        "2e1afcfe-1e70-4f15-bba8-1acc089edd40",
        "d6f8a236-4a04-4999-a8d1-d0f8c95c9a1f",
        "87262606-aa57-4035-a83f-3baac10bf4e9",
        "ec23f826-05bc-4bfc-b3e1-b2227e782ce9",
      ],
    },
  },
}
`;

exports[`mergeRecords volume one serie with two editions on empty store 1`] = `
Immutable.Map {
  data: Immutable.Map {
    f0bc0f76-bddf-4af8-a589-0d877aae9235: Object {
      "content": null,
      "date": "2007-12-07",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "f0bc0f76-bddf-4af8-a589-0d877aae9235",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61qgonxtZOL.jpg",
      "isbn": "9782505001997",
      "number": 7,
      "title": "Tome 7",
    },
    a2280876-7082-48b5-bab3-34c4e5eab279: Object {
      "content": null,
      "date": "2007-10-05",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "a2280876-7082-48b5-bab3-34c4e5eab279",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ccrw7ky1L.jpg",
      "isbn": "9782505001812",
      "number": 6,
      "title": "Tome 6",
    },
    fa7a1162-d9e3-462f-a367-8371a55f7c94: Object {
      "content": null,
      "date": "2007-04-05",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "fa7a1162-d9e3-462f-a367-8371a55f7c94",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61fiEjVbUbL.jpg",
      "isbn": "9782505000792",
      "number": 3,
      "title": "Tome 3",
    },
    11d1491e-22d4-49f1-b29f-78007493d4e6: Object {
      "content": null,
      "date": "2007-02-01",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "11d1491e-22d4-49f1-b29f-78007493d4e6",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61DduSmdKGL.jpg",
      "isbn": "9782505000426",
      "number": 2,
      "title": "Tome 2",
    },
    ec9d0282-78a1-491e-bd1e-a937b332c56f: Object {
      "content": null,
      "date": "2011-05-06",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "ec9d0282-78a1-491e-bd1e-a937b332c56f",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/41FBONjMi4L.jpg",
      "isbn": "9782505010951",
      "number": 6,
      "title": "Tome 6",
    },
    69fed8ee-a500-4bde-9ba2-458f639785d1: Object {
      "content": null,
      "date": "2011-01-07",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "69fed8ee-a500-4bde-9ba2-458f639785d1",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/41lRggimfJL.jpg",
      "isbn": "9782505010326",
      "number": 4,
      "title": "Tome 4",
    },
    c1995831-6447-43e9-869b-74f2cf93966d: Object {
      "content": null,
      "date": "2008-06-06",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "c1995831-6447-43e9-869b-74f2cf93966d",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61OEH0gsrIL.jpg",
      "isbn": "9782505003038",
      "number": 10,
      "title": "Tome 10",
    },
    a4477f49-cff1-4913-bd39-68fefbc10479: Object {
      "content": null,
      "date": "2008-07-04",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "a4477f49-cff1-4913-bd39-68fefbc10479",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/618b1GXgGFL.jpg",
      "isbn": "9782505003694",
      "number": 11,
      "title": "Tome 11",
    },
    11606764-7aee-4e33-9df1-e9dc5298eda8: Object {
      "content": null,
      "date": "2008-10-02",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "11606764-7aee-4e33-9df1-e9dc5298eda8",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61XFUTPtQdL.jpg",
      "isbn": "9782505004295",
      "number": 12,
      "title": "Tome 12",
    },
    3a03733c-1a5a-4673-9299-28e5cc82a8af: Object {
      "content": null,
      "date": "2010-09-03",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "3a03733c-1a5a-4673-9299-28e5cc82a8af",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51KMP3phtGL.jpg",
      "isbn": "9782505009061",
      "number": 2,
      "title": "Tome 2",
    },
    b95ab092-9baf-4feb-b8f1-e79b449b9c54: Object {
      "content": null,
      "date": "2007-08-24",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "b95ab092-9baf-4feb-b8f1-e79b449b9c54",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61bXKQlOllL.jpg",
      "isbn": "9782505001614",
      "number": 5,
      "title": "Tome 5",
    },
    081648ff-1b14-4af7-b8f0-9e97b0ba6804: Object {
      "content": null,
      "date": "2009-09-18",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "081648ff-1b14-4af7-b8f0-9e97b0ba6804",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51JrRDR1ANL.jpg",
      "isbn": "9782505004523",
      "number": 13,
      "title": "Tome 13",
    },
    12b5dc0d-253a-41dd-bbee-e1f31e947eb1: Object {
      "content": null,
      "date": "2008-02-15",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "12b5dc0d-253a-41dd-bbee-e1f31e947eb1",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ZlUQFdaPL.jpg",
      "isbn": "9782505002697",
      "number": 8,
      "title": "Tome 8",
    },
    e7dbccb5-4710-446b-8c08-d35fb8a1eaeb: Object {
      "content": null,
      "date": "2007-05-31",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "e7dbccb5-4710-446b-8c08-d35fb8a1eaeb",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/611d8aPhqhL.jpg",
      "isbn": "9782505001065",
      "number": 4,
      "title": "Tome 4",
    },
    dbab2483-2d3c-4832-9993-b6efbd765787: Object {
      "content": null,
      "date": "2010-07-02",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "dbab2483-2d3c-4832-9993-b6efbd765787",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/413rEPunmPL.jpg",
      "isbn": "9782505009054",
      "number": 1,
      "title": "Tome 1",
    },
    73f6690b-716b-4659-97f5-d66ce10acd8a: Object {
      "content": null,
      "date": "2008-04-11",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "73f6690b-716b-4659-97f5-d66ce10acd8a",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61jqfMbZ8VL.jpg",
      "isbn": "9782505002970",
      "number": 9,
      "title": "Tome 9",
    },
    7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32: Object {
      "content": null,
      "date": "2010-11-05",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/41mLoqm6D0L.jpg",
      "isbn": "9782505009986",
      "number": 3,
      "title": "Tome 3",
    },
    ff15ae7e-fcfe-4061-a27b-3b481e5f313c: Object {
      "content": null,
      "date": "2007-01-18",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "ff15ae7e-fcfe-4061-a27b-3b481e5f313c",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51eBp6XUd5L.jpg",
      "isbn": "9782505000327",
      "number": 1,
      "title": "Tome 1",
    },
    ef282203-2ef5-4972-9598-d365fe7ff09c: Object {
      "content": null,
      "date": "2011-03-04",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "ef282203-2ef5-4972-9598-d365fe7ff09c",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/41%2BDT%2B3-rwL.jpg",
      "isbn": "9782505010692",
      "number": 5,
      "title": "Tome 5",
    },
  },
  relations: Immutable.Map {
    edition_id: Immutable.Map {
      908612fd-1cc7-4780-aea4-63d3ac04c6bd: Immutable.OrderedSet [
        "ec9d0282-78a1-491e-bd1e-a937b332c56f",
        "ef282203-2ef5-4972-9598-d365fe7ff09c",
        "69fed8ee-a500-4bde-9ba2-458f639785d1",
        "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32",
        "3a03733c-1a5a-4673-9299-28e5cc82a8af",
        "dbab2483-2d3c-4832-9993-b6efbd765787",
      ],
      5482eba9-2773-40d8-82f7-1870b1b2a3e9: Immutable.OrderedSet [
        "081648ff-1b14-4af7-b8f0-9e97b0ba6804",
        "11606764-7aee-4e33-9df1-e9dc5298eda8",
        "a4477f49-cff1-4913-bd39-68fefbc10479",
        "c1995831-6447-43e9-869b-74f2cf93966d",
        "73f6690b-716b-4659-97f5-d66ce10acd8a",
        "12b5dc0d-253a-41dd-bbee-e1f31e947eb1",
        "f0bc0f76-bddf-4af8-a589-0d877aae9235",
        "a2280876-7082-48b5-bab3-34c4e5eab279",
        "b95ab092-9baf-4feb-b8f1-e79b449b9c54",
        "e7dbccb5-4710-446b-8c08-d35fb8a1eaeb",
        "fa7a1162-d9e3-462f-a367-8371a55f7c94",
        "11d1491e-22d4-49f1-b29f-78007493d4e6",
        "ff15ae7e-fcfe-4061-a27b-3b481e5f313c",
      ],
    },
  },
}
`;

exports[`mergeRecords volume two series with two editions each on empty store 1`] = `
Immutable.Map {
  data: Immutable.Map {
    6c507d7f-660b-41cb-b2c5-63d521a28a5c: Object {
      "content": null,
      "date": "2013-06-13",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "6c507d7f-660b-41cb-b2c5-63d521a28a5c",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51F6C3joThL.jpg",
      "isbn": "9782351428863",
      "number": 6,
      "title": "Tome VI (12-13)",
    },
    f0bc0f76-bddf-4af8-a589-0d877aae9235: Object {
      "content": null,
      "date": "2007-12-07",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "f0bc0f76-bddf-4af8-a589-0d877aae9235",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61qgonxtZOL.jpg",
      "isbn": "9782505001997",
      "number": 7,
      "title": "Tome 7",
    },
    b9a4ab06-bf43-47ca-950c-c973b6b18f87: Object {
      "content": null,
      "date": "2009-07-02",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "b9a4ab06-bf43-47ca-950c-c973b6b18f87",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51PDZv8zolL.jpg",
      "isbn": "9782351424285",
      "number": 21,
      "title": "Tome 21",
    },
    a2280876-7082-48b5-bab3-34c4e5eab279: Object {
      "content": null,
      "date": "2007-10-05",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "a2280876-7082-48b5-bab3-34c4e5eab279",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ccrw7ky1L.jpg",
      "isbn": "9782505001812",
      "number": 6,
      "title": "Tome 6",
    },
    fa7a1162-d9e3-462f-a367-8371a55f7c94: Object {
      "content": null,
      "date": "2007-04-05",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "fa7a1162-d9e3-462f-a367-8371a55f7c94",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61fiEjVbUbL.jpg",
      "isbn": "9782505000792",
      "number": 3,
      "title": "Tome 3",
    },
    79bee76a-01fd-4fd3-b3e2-690a969780b7: Object {
      "content": null,
      "date": "2013-12-12",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "79bee76a-01fd-4fd3-b3e2-690a969780b7",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/5110gRxSqXL.jpg",
      "isbn": "9782351428993",
      "number": 8,
      "title": "Tome VIII (16-17)",
    },
    11d1491e-22d4-49f1-b29f-78007493d4e6: Object {
      "content": null,
      "date": "2007-02-01",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "11d1491e-22d4-49f1-b29f-78007493d4e6",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61DduSmdKGL.jpg",
      "isbn": "9782505000426",
      "number": 2,
      "title": "Tome 2",
    },
    8d5329c8-2ad5-4713-8961-84f2e42a61c6: Object {
      "content": null,
      "date": "2012-03-08",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "8d5329c8-2ad5-4713-8961-84f2e42a61c6",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51MOHY8mkuL.jpg",
      "isbn": "9782351427552",
      "number": 1,
      "title": "Tome I (1-2-3)",
    },
    1fcc0860-bade-4c4c-9554-765af0f6c3a5: Object {
      "content": null,
      "date": "2015-09-10",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "1fcc0860-bade-4c4c-9554-765af0f6c3a5",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51maVan7OVL.jpg",
      "isbn": "9782368521298",
      "number": 13,
      "title": "TOME XIII (26-27)",
    },
    a88bec8c-f793-4b18-858a-843e4da8d97b: Object {
      "content": null,
      "date": "2009-11-11",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "a88bec8c-f793-4b18-858a-843e4da8d97b",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51gKyIdz4HL.jpg",
      "isbn": "9782351424483",
      "number": 22,
      "title": "Tome 22",
    },
    ebdca7a2-8f86-4c64-a30a-86cdfb71ba7e: Object {
      "content": null,
      "date": "2008-12-11",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "ebdca7a2-8f86-4c64-a30a-86cdfb71ba7e",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51AJQx-WJTL.jpg",
      "isbn": "9782351423356",
      "number": 19,
      "title": "Tome 19",
    },
    aa321497-4302-4d2e-bee2-997cc67d915c: Object {
      "content": null,
      "date": "2008-03-13",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "aa321497-4302-4d2e-bee2-997cc67d915c",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ZPmK0lQ5L.jpg",
      "isbn": "9782351422656",
      "number": 16,
      "title": "Tome 16",
    },
    b70e06ed-3004-4987-8974-d9270c623cb9: Object {
      "content": null,
      "date": "2008-05-15",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "b70e06ed-3004-4987-8974-d9270c623cb9",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51U2mxsRMBL.jpg",
      "isbn": "9782351423189",
      "number": 17,
      "title": "Tome 17",
    },
    9e207271-9b78-401b-88f1-50b3432ea0cd: Object {
      "content": null,
      "date": "2009-04-09",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "9e207271-9b78-401b-88f1-50b3432ea0cd",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51JbyQkx8mL.jpg",
      "isbn": "9782351424117",
      "number": 20,
      "title": "Tome 20",
    },
    22549c4a-290c-4ad7-b73f-ca9b10aa41b0: Object {
      "content": null,
      "date": "2006-03-09",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "22549c4a-290c-4ad7-b73f-ca9b10aa41b0",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51PHT8RQ3XL.jpg",
      "isbn": "9782351420454",
      "number": 5,
      "title": "Tome 5",
    },
    ec9d0282-78a1-491e-bd1e-a937b332c56f: Object {
      "content": null,
      "date": "2011-05-06",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "ec9d0282-78a1-491e-bd1e-a937b332c56f",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/41FBONjMi4L.jpg",
      "isbn": "9782505010951",
      "number": 6,
      "title": "Tome 6",
    },
    5e336e2a-794f-43e3-b299-10eb2020fa73: Object {
      "content": null,
      "date": "2006-07-13",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "5e336e2a-794f-43e3-b299-10eb2020fa73",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51BNYNYRCHL.jpg",
      "isbn": "9782351420478",
      "number": 7,
      "title": "Tome 7",
    },
    3ed9c57c-f69a-4898-99b1-27fd2bb4bb89: Object {
      "content": null,
      "date": "2010-09-09",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "3ed9c57c-f69a-4898-99b1-27fd2bb4bb89",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51MUDCoa2%2BL.jpg",
      "isbn": "9782351425497",
      "number": 24,
      "title": "Tome 24",
    },
    69fed8ee-a500-4bde-9ba2-458f639785d1: Object {
      "content": null,
      "date": "2011-01-07",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "69fed8ee-a500-4bde-9ba2-458f639785d1",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/41lRggimfJL.jpg",
      "isbn": "9782505010326",
      "number": 4,
      "title": "Tome 4",
    },
    7407fb12-e182-400d-936e-0b807635c26e: Object {
      "content": null,
      "date": "2008-09-11",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "7407fb12-e182-400d-936e-0b807635c26e",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51Yqa-BwdeL.jpg",
      "isbn": "9782351423257",
      "number": 18,
      "title": "Tome 18",
    },
    c1995831-6447-43e9-869b-74f2cf93966d: Object {
      "content": null,
      "date": "2008-06-06",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "c1995831-6447-43e9-869b-74f2cf93966d",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61OEH0gsrIL.jpg",
      "isbn": "9782505003038",
      "number": 10,
      "title": "Tome 10",
    },
    a4477f49-cff1-4913-bd39-68fefbc10479: Object {
      "content": null,
      "date": "2008-07-04",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "a4477f49-cff1-4913-bd39-68fefbc10479",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/618b1GXgGFL.jpg",
      "isbn": "9782505003694",
      "number": 11,
      "title": "Tome 11",
    },
    ab0808c6-83d3-4c23-b4f3-3d9375a94424: Object {
      "content": null,
      "date": "2014-03-13",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "ab0808c6-83d3-4c23-b4f3-3d9375a94424",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51KTyJvBA3L.jpg",
      "isbn": "9782351429884",
      "number": 9,
      "title": "Tome IX (18-19)",
    },
    87adf237-5a75-4389-9c5e-66a0aa17be9a: Object {
      "content": null,
      "date": "2007-03-08",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "87adf237-5a75-4389-9c5e-66a0aa17be9a",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51pBQ9Fa7qL.jpg",
      "isbn": "9782351421512",
      "number": 11,
      "title": "Tome 11",
    },
    11606764-7aee-4e33-9df1-e9dc5298eda8: Object {
      "content": null,
      "date": "2008-10-02",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "11606764-7aee-4e33-9df1-e9dc5298eda8",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61XFUTPtQdL.jpg",
      "isbn": "9782505004295",
      "number": 12,
      "title": "Tome 12",
    },
    0c34b2b6-15ac-4f36-bdb1-87cbebe87d53: Object {
      "content": null,
      "date": "2006-03-14",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "0c34b2b6-15ac-4f36-bdb1-87cbebe87d53",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/518dhvDM77L.jpg",
      "isbn": "9782351420485",
      "number": 8,
      "title": "Tome 8",
    },
    4b155570-e2bc-44e8-8f92-f66ac55e72b0: Object {
      "content": null,
      "date": "2007-11-08",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "4b155570-e2bc-44e8-8f92-f66ac55e72b0",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51o0y0uZgWL.jpg",
      "isbn": "9782351421598",
      "number": 15,
      "title": "Tome 15",
    },
    70f353f8-3374-43c1-a681-19dbf9fa3c2e: Object {
      "content": null,
      "date": "2006-05-11",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "70f353f8-3374-43c1-a681-19dbf9fa3c2e",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/518GTC3WXZL.jpg",
      "isbn": "9782351420461",
      "number": 6,
      "title": "Tome 6",
    },
    9f016317-2b39-4daa-8f7a-d936616b2473: Object {
      "content": null,
      "date": "2007-05-10",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "9f016317-2b39-4daa-8f7a-d936616b2473",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/516r%2BFE%2BHdL.jpg",
      "isbn": "9782351421567",
      "number": 12,
      "title": "Tome 12",
    },
    b87423f2-71d7-4be4-8fdc-bc396708ee63: Object {
      "content": null,
      "date": "2012-03-08",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "b87423f2-71d7-4be4-8fdc-bc396708ee63",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51CscZC9c-L.jpg",
      "isbn": "9782351427521",
      "number": 2,
      "title": "Tome II (4-5)",
    },
    ae4cc5d7-d42d-41f6-80c1-8c6aa432d078: Object {
      "content": null,
      "date": "2011-07-07",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "ae4cc5d7-d42d-41f6-80c1-8c6aa432d078",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/5180gk8s3ML.jpg",
      "isbn": "9782351426517",
      "number": 27,
      "title": "Tome 27",
    },
    3a03733c-1a5a-4673-9299-28e5cc82a8af: Object {
      "content": null,
      "date": "2010-09-03",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "3a03733c-1a5a-4673-9299-28e5cc82a8af",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51KMP3phtGL.jpg",
      "isbn": "9782505009061",
      "number": 2,
      "title": "Tome 2",
    },
    f6e73e4f-1695-42e1-87a0-0cea8c66c935: Object {
      "content": null,
      "date": "2012-12-13",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "f6e73e4f-1695-42e1-87a0-0cea8c66c935",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51VA-uGoFTL.jpg",
      "isbn": "9782351428016",
      "number": 4,
      "title": "Tome IV (8-9)",
    },
    58715dcb-ce62-4b8c-a6b0-6412310b12ff: Object {
      "content": null,
      "date": "2006-11-09",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "58715dcb-ce62-4b8c-a6b0-6412310b12ff",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51N7A347E8L.jpg",
      "isbn": "9782351420492",
      "number": 9,
      "title": "Tome 9",
    },
    6aaa945f-074c-4a4f-9662-15e7a8d70a73: Object {
      "content": null,
      "date": "2012-09-13",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "6aaa945f-074c-4a4f-9662-15e7a8d70a73",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51oDm7wFRML.jpg",
      "isbn": "9782351428009",
      "number": 3,
      "title": "Tome III (6-7)",
    },
    0a914a8f-18fc-4103-9385-4b888714ec30: Object {
      "content": null,
      "date": "2015-05-15",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "0a914a8f-18fc-4103-9385-4b888714ec30",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ZchWkPawL.jpg",
      "isbn": "9782368521281",
      "number": 12,
      "title": "TOME XII (24-25)",
    },
    98739f45-b46a-41cb-822d-fc9953dc5fc1: Object {
      "content": null,
      "date": "2013-09-12",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "98739f45-b46a-41cb-822d-fc9953dc5fc1",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51HnB19v8xL.jpg",
      "isbn": "9782351428986",
      "number": 7,
      "title": "Tome VII (14-15)",
    },
    8dfb2e62-fa73-4570-9d8a-1647e7ee4e48: Object {
      "content": null,
      "date": "2014-08-28",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "8dfb2e62-fa73-4570-9d8a-1647e7ee4e48",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51yYF6FeaXL.jpg",
      "isbn": "9782351429891",
      "number": 10,
      "title": "Tome X (20-21)",
    },
    97d6078e-b650-412a-981d-311859f62e50: Object {
      "content": null,
      "date": "2005-11-10",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "97d6078e-b650-412a-981d-311859f62e50",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/4170GPPT93L.jpg",
      "isbn": "9782351420195",
      "number": 3,
      "title": "Tome 3",
    },
    b95ab092-9baf-4feb-b8f1-e79b449b9c54: Object {
      "content": null,
      "date": "2007-08-24",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "b95ab092-9baf-4feb-b8f1-e79b449b9c54",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61bXKQlOllL.jpg",
      "isbn": "9782505001614",
      "number": 5,
      "title": "Tome 5",
    },
    d13f21d4-eee6-4b45-bb1c-ce1a8c746613: Object {
      "content": null,
      "date": "2006-01-12",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "d13f21d4-eee6-4b45-bb1c-ce1a8c746613",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51Z7FVQZ7EL.jpg",
      "isbn": "9782351420416",
      "number": 4,
      "title": "Tome 4",
    },
    6bc33a10-08e7-448c-9608-91ce041f411c: Object {
      "content": null,
      "date": "2007-09-13",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "6bc33a10-08e7-448c-9608-91ce041f411c",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/5166lgh93xL.jpg",
      "isbn": "9782351421581",
      "number": 14,
      "title": "Tome 14",
    },
    031b0651-488e-4926-be9c-7a3ccfcc9af7: Object {
      "content": null,
      "date": "2010-04-08",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "031b0651-488e-4926-be9c-7a3ccfcc9af7",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51nhgwjPE8L.jpg",
      "isbn": "9782351425077",
      "number": 23,
      "title": "Tome 23",
    },
    4b3ecb6e-a082-49dc-8c9e-848a54c3ccb3: Object {
      "content": null,
      "date": "2005-09-08",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "4b3ecb6e-a082-49dc-8c9e-848a54c3ccb3",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51s8zCicyrL.jpg",
      "isbn": "9782351420188",
      "number": 2,
      "title": "Tome 2",
    },
    081648ff-1b14-4af7-b8f0-9e97b0ba6804: Object {
      "content": null,
      "date": "2009-09-18",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "081648ff-1b14-4af7-b8f0-9e97b0ba6804",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51JrRDR1ANL.jpg",
      "isbn": "9782505004523",
      "number": 13,
      "title": "Tome 13",
    },
    12b5dc0d-253a-41dd-bbee-e1f31e947eb1: Object {
      "content": null,
      "date": "2008-02-15",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "12b5dc0d-253a-41dd-bbee-e1f31e947eb1",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51ZlUQFdaPL.jpg",
      "isbn": "9782505002697",
      "number": 8,
      "title": "Tome 8",
    },
    e7dbccb5-4710-446b-8c08-d35fb8a1eaeb: Object {
      "content": null,
      "date": "2007-05-31",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "e7dbccb5-4710-446b-8c08-d35fb8a1eaeb",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/611d8aPhqhL.jpg",
      "isbn": "9782505001065",
      "number": 4,
      "title": "Tome 4",
    },
    dbab2483-2d3c-4832-9993-b6efbd765787: Object {
      "content": null,
      "date": "2010-07-02",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "dbab2483-2d3c-4832-9993-b6efbd765787",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/413rEPunmPL.jpg",
      "isbn": "9782505009054",
      "number": 1,
      "title": "Tome 1",
    },
    73f6690b-716b-4659-97f5-d66ce10acd8a: Object {
      "content": null,
      "date": "2008-04-11",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "73f6690b-716b-4659-97f5-d66ce10acd8a",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/61jqfMbZ8VL.jpg",
      "isbn": "9782505002970",
      "number": 9,
      "title": "Tome 9",
    },
    0354b860-d994-4fb2-b649-ca8c494a26f6: Object {
      "content": null,
      "date": "2014-12-11",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "0354b860-d994-4fb2-b649-ca8c494a26f6",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51VgR6QYSWL.jpg",
      "isbn": "9782351429907",
      "number": 11,
      "title": "Tome XI (22-23)",
    },
    ee7075c0-ff5a-44b0-a832-02a0c2d97151: Object {
      "content": null,
      "date": "2011-01-13",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "ee7075c0-ff5a-44b0-a832-02a0c2d97151",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51QJSQxrRHL.jpg",
      "isbn": "9782351425732",
      "number": 25,
      "title": "Tome 25",
    },
    7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32: Object {
      "content": null,
      "date": "2010-11-05",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/41mLoqm6D0L.jpg",
      "isbn": "9782505009986",
      "number": 3,
      "title": "Tome 3",
    },
    ff15ae7e-fcfe-4061-a27b-3b481e5f313c: Object {
      "content": null,
      "date": "2007-01-18",
      "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
      "id": "ff15ae7e-fcfe-4061-a27b-3b481e5f313c",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51eBp6XUd5L.jpg",
      "isbn": "9782505000327",
      "number": 1,
      "title": "Tome 1",
    },
    29cac096-a063-41c2-82d0-7be9a957ca73: Object {
      "content": null,
      "date": "2007-01-11",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "29cac096-a063-41c2-82d0-7be9a957ca73",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51%2BMB-tOfVL.jpg",
      "isbn": "9782351421475",
      "number": 10,
      "title": "Tome 10",
    },
    ef282203-2ef5-4972-9598-d365fe7ff09c: Object {
      "content": null,
      "date": "2011-03-04",
      "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
      "id": "ef282203-2ef5-4972-9598-d365fe7ff09c",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/41%2BDT%2B3-rwL.jpg",
      "isbn": "9782505010692",
      "number": 5,
      "title": "Tome 5",
    },
    37b02128-ba53-448b-9cc7-14f0e7225d8b: Object {
      "content": null,
      "date": "2007-07-12",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "37b02128-ba53-448b-9cc7-14f0e7225d8b",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51sGW14FPOL.jpg",
      "isbn": "9782351421574",
      "number": 13,
      "title": "Tome 13",
    },
    e31288f3-a313-4a9b-a193-857a9fb227ab: Object {
      "content": null,
      "date": "2005-09-08",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "e31288f3-a313-4a9b-a193-857a9fb227ab",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51-4u%2B8MwSL.jpg",
      "isbn": "9782351420171",
      "number": 1,
      "title": "Tome 1",
    },
    9ce1636f-8f64-4de9-a7c8-fc51de1892d8: Object {
      "content": null,
      "date": "2013-03-14",
      "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
      "id": "9ce1636f-8f64-4de9-a7c8-fc51de1892d8",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/516OCcGCm9L.jpg",
      "isbn": "9782351428740",
      "number": 5,
      "title": "Tome V (10-11)",
    },
    d73221df-c228-4d34-9c44-a599e861d27a: Object {
      "content": null,
      "date": "2011-04-14",
      "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
      "id": "d73221df-c228-4d34-9c44-a599e861d27a",
      "img": "https://images-eu.ssl-images-amazon.com/images/I/51XhvMFwHuL.jpg",
      "isbn": "9782351426319",
      "number": 26,
      "title": "Tome 26",
    },
  },
  relations: Immutable.Map {
    edition_id: Immutable.Map {
      908612fd-1cc7-4780-aea4-63d3ac04c6bd: Immutable.OrderedSet [
        "ec9d0282-78a1-491e-bd1e-a937b332c56f",
        "ef282203-2ef5-4972-9598-d365fe7ff09c",
        "69fed8ee-a500-4bde-9ba2-458f639785d1",
        "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32",
        "3a03733c-1a5a-4673-9299-28e5cc82a8af",
        "dbab2483-2d3c-4832-9993-b6efbd765787",
      ],
      5482eba9-2773-40d8-82f7-1870b1b2a3e9: Immutable.OrderedSet [
        "081648ff-1b14-4af7-b8f0-9e97b0ba6804",
        "11606764-7aee-4e33-9df1-e9dc5298eda8",
        "a4477f49-cff1-4913-bd39-68fefbc10479",
        "c1995831-6447-43e9-869b-74f2cf93966d",
        "73f6690b-716b-4659-97f5-d66ce10acd8a",
        "12b5dc0d-253a-41dd-bbee-e1f31e947eb1",
        "f0bc0f76-bddf-4af8-a589-0d877aae9235",
        "a2280876-7082-48b5-bab3-34c4e5eab279",
        "b95ab092-9baf-4feb-b8f1-e79b449b9c54",
        "e7dbccb5-4710-446b-8c08-d35fb8a1eaeb",
        "fa7a1162-d9e3-462f-a367-8371a55f7c94",
        "11d1491e-22d4-49f1-b29f-78007493d4e6",
        "ff15ae7e-fcfe-4061-a27b-3b481e5f313c",
      ],
      d42c9391-c92f-4485-a772-8df06d70ed17: Immutable.OrderedSet [
        "1fcc0860-bade-4c4c-9554-765af0f6c3a5",
        "0a914a8f-18fc-4103-9385-4b888714ec30",
        "0354b860-d994-4fb2-b649-ca8c494a26f6",
        "8dfb2e62-fa73-4570-9d8a-1647e7ee4e48",
        "ab0808c6-83d3-4c23-b4f3-3d9375a94424",
        "79bee76a-01fd-4fd3-b3e2-690a969780b7",
        "98739f45-b46a-41cb-822d-fc9953dc5fc1",
        "6c507d7f-660b-41cb-b2c5-63d521a28a5c",
        "9ce1636f-8f64-4de9-a7c8-fc51de1892d8",
        "f6e73e4f-1695-42e1-87a0-0cea8c66c935",
        "6aaa945f-074c-4a4f-9662-15e7a8d70a73",
        "b87423f2-71d7-4be4-8fdc-bc396708ee63",
        "8d5329c8-2ad5-4713-8961-84f2e42a61c6",
      ],
      ffdf56ae-058d-49c6-80c6-336471a73dcc: Immutable.OrderedSet [
        "ae4cc5d7-d42d-41f6-80c1-8c6aa432d078",
        "d73221df-c228-4d34-9c44-a599e861d27a",
        "ee7075c0-ff5a-44b0-a832-02a0c2d97151",
        "3ed9c57c-f69a-4898-99b1-27fd2bb4bb89",
        "031b0651-488e-4926-be9c-7a3ccfcc9af7",
        "a88bec8c-f793-4b18-858a-843e4da8d97b",
        "b9a4ab06-bf43-47ca-950c-c973b6b18f87",
        "9e207271-9b78-401b-88f1-50b3432ea0cd",
        "ebdca7a2-8f86-4c64-a30a-86cdfb71ba7e",
        "7407fb12-e182-400d-936e-0b807635c26e",
        "b70e06ed-3004-4987-8974-d9270c623cb9",
        "aa321497-4302-4d2e-bee2-997cc67d915c",
        "4b155570-e2bc-44e8-8f92-f66ac55e72b0",
        "6bc33a10-08e7-448c-9608-91ce041f411c",
        "37b02128-ba53-448b-9cc7-14f0e7225d8b",
        "9f016317-2b39-4daa-8f7a-d936616b2473",
        "87adf237-5a75-4389-9c5e-66a0aa17be9a",
        "29cac096-a063-41c2-82d0-7be9a957ca73",
        "58715dcb-ce62-4b8c-a6b0-6412310b12ff",
        "5e336e2a-794f-43e3-b299-10eb2020fa73",
        "70f353f8-3374-43c1-a681-19dbf9fa3c2e",
        "0c34b2b6-15ac-4f36-bdb1-87cbebe87d53",
        "22549c4a-290c-4ad7-b73f-ca9b10aa41b0",
        "d13f21d4-eee6-4b45-bb1c-ce1a8c746613",
        "97d6078e-b650-412a-981d-311859f62e50",
        "4b3ecb6e-a082-49dc-8c9e-848a54c3ccb3",
        "e31288f3-a313-4a9b-a193-857a9fb227ab",
      ],
    },
  },
}
`;
